--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -85,7 +85,7 @@ ___  ___        _      _  _
           <div *ngIf="progNot_InitDisplay" class="custom-font">
             <div [innerHTML]="progNot_InitDisplay">
             </div>
-            <button (click)="showProgressNotes()">show
+            <button color="light" (click)="showProgressNotes()">show
               more</button>
 
           </div>
