fix on darkmode see more

--- a/src/app/chh-web-components/cardshowhide/cardshowhide.component.html
+++ b/src/app/chh-web-components/cardshowhide/cardshowhide.component.html
@@ -2,11 +2,11 @@
   <div *ngIf="truncating">
     <ion-text class="custom-font" [innerHtml]="notesmall"></ion-text>
     <br />
-    <button ion-button color="light" (click)="process()" *ngIf="noteslength">show more</button>
+    <ion-button color="light" size="small" color="light" (click)="process()" *ngIf="noteslength">show more</ion-button>
   </div>
   <div *ngIf="!truncating">
     <ion-text class="custom-font" [innerHtml]="notes"></ion-text>
     <br />
-    <button ion-button color="light" (click)="process();" *ngIf="noteslength">show less</button>
+    <ion-button color="light" size="small" color="light" (click)="process();" *ngIf="noteslength">show less</ion-button>
   </div>
 </ion-card-content>
