--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -85,8 +85,8 @@ ___  ___        _      _  _
           <div *ngIf="progNot_InitDisplay" class="custom-font">
             <div [innerHTML]="progNot_InitDisplay">
             </div>
-            <button color="light" (click)="showProgressNotes()">show
-              more</button>
+            <ion-button color="light" size="small" (click)="showProgressNotes()">show
+              more</ion-button>
 
           </div>
         </div>
