--- a/src/app/chh-web-components/progressnotes-history-card/progressnotes-history-card.component.html
+++ b/src/app/chh-web-components/progressnotes-history-card/progressnotes-history-card.component.html
@@ -1,5 +1,5 @@
 <ion-card class="pointer customcardcss" id="asdasd{{counter}}" [ngClass]="getType()">
-  <ion-item *ngIf="type == 'progressnotes'">
+  <ion-item>
     <ion-avatar>
       <img src="https://doki.chonghua.com.ph/assets/profile/{{user_created}}.png">
     </ion-avatar>
@@ -22,7 +22,7 @@
       </ion-button>
     </div>
   </ion-card-content>
-  <ion-item *ngIf="type != 'progressnotes'">
+  <!--ion-item *ngIf="type != 'progressnotes'">
     <ion-avatar>
       <img src="https://doki.chonghua.com.ph/assets/profile/{{user_created}}.png">
     </ion-avatar>
@@ -30,5 +30,5 @@
       <h3>{{user_created}}</h3>
       <p>{{dateCreateConverted}} {{dateCreateTimeConverted}}</p>
     </ion-label>
-  </ion-item>
+  </ion-item-->
 </ion-card>
