--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -116,7 +116,7 @@
     <ion-card mode="ios" *ngIf="!isDesktop && InsuranceShowVat">
       <ion-item lines="none">
         <ion-label>Add VAT?</ion-label>
-        <ion-checkbox color="mango" checked="false" [(ngModel)]="InsuranceVat" (ionChange)="insuranceVat()">
+        <ion-checkbox color="primary" checked="false" [(ngModel)]="InsuranceVat" (ionChange)="insuranceVat()">
         </ion-checkbox>
       </ion-item>
     </ion-card>
@@ -212,7 +212,7 @@ ______   _   _   _____   _____
     <ion-card mode="ios" *ngIf="!isDesktop">
       <ion-item disabled="true" hidden>
         <ion-label>Accept PhilHealth Only?</ion-label>
-        <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()">
+        <ion-checkbox color="primary" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()">
         </ion-checkbox>
       </ion-item>
     </ion-card>
@@ -227,7 +227,7 @@ ______   _   _   _____   _____
     <ion-card mode="ios" *ngIf="!isDesktop && PhilhealthShowVat">
       <ion-item lines="none">
         <ion-label>Add VAT?</ion-label>
-        <ion-checkbox color="mango" checked="false" [(ngModel)]="PhilhealthVat" (ionChange)="philhealthVat()">
+        <ion-checkbox color="primary" checked="false" [(ngModel)]="PhilhealthVat" (ionChange)="philhealthVat()">
         </ion-checkbox>
       </ion-item>
     </ion-card>
@@ -344,7 +344,7 @@ ______                         ______   _   _   _____   _____
     <ion-card mode="ios" *ngIf="!isDesktop && PersonalPhilhealthShowVat">
       <ion-item lines="none">
         <ion-label>Add VAT?</ion-label>
-        <ion-checkbox color="mango" checked="false" [(ngModel)]="PersonalPhilhealthVat"
+        <ion-checkbox color="primary" checked="false" [(ngModel)]="PersonalPhilhealthVat"
           (ionChange)="personalPhilhealthVat()"></ion-checkbox>
       </ion-item>
     </ion-card>
@@ -624,7 +624,8 @@ ______          _    _
                 <ion-card mode="ios" *ngIf="InsuranceShowVat">
                   <ion-item lines="none">
                     <ion-label>Add VAT?</ion-label>
-                    <ion-checkbox color="mango" checked="false" [(ngModel)]="InsuranceVat" (ionChange)="insuranceVat()">
+                    <ion-checkbox color="primary" checked="false" [(ngModel)]="InsuranceVat"
+                      (ionChange)="insuranceVat()">
                     </ion-checkbox>
                   </ion-item>
                 </ion-card>
@@ -714,7 +715,7 @@ ______   _   _   _____   _____
                 <ion-card mode="ios">
                   <ion-item disabled="true" hidden>
                     <ion-label>Accept PhilHealth Only?</ion-label>
-                    <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly"
+                    <ion-checkbox color="primary" checked="false" [(ngModel)]="IsPhilhealthOnly"
                       (ionChange)="isPhilhealthOnly()">
                     </ion-checkbox>
                   </ion-item>
@@ -729,7 +730,7 @@ ______   _   _   _____   _____
                 <ion-card mode="ios" *ngIf="PhilhealthShowVat">
                   <ion-item lines="none">
                     <ion-label>Add VAT?</ion-label>
-                    <ion-checkbox color="mango" checked="false" [(ngModel)]="PhilhealthVat"
+                    <ion-checkbox color="primary" checked="false" [(ngModel)]="PhilhealthVat"
                       (ionChange)="philhealthVat()">
                     </ion-checkbox>
                   </ion-item>
@@ -842,7 +843,7 @@ ______                         ______   _   _   _____   _____
                 <ion-card mode="ios" *ngIf="PersonalPhilhealthShowVat">
                   <ion-item lines="none">
                     <ion-label>Add VAT?</ion-label>
-                    <ion-checkbox color="mango" checked="false" [(ngModel)]="PersonalPhilhealthVat"
+                    <ion-checkbox color="primary" checked="false" [(ngModel)]="PersonalPhilhealthVat"
                       (ionChange)="personalPhilhealthVat()"></ion-checkbox>
                   </ion-item>
                 </ion-card>
