--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -2,7 +2,8 @@
   <div *ngIf="!isDesktop">
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="person-circle-outline"></ion-icon> {{this.constants.MENU__VALUE__IN_PATIENTS}} <ion-text style="font-size:14px">
+        <ion-icon name="person-circle-outline"></ion-icon> {{this.constants.MENU__VALUE__IN_PATIENTS}} <ion-text
+          style="font-size:14px">
           {{admittedOrDischargeLabel}}
         </ion-text>
       </ion-title>
@@ -43,31 +44,15 @@
 
   <ion-grid class="ion-no-padding chh-darkmode">
     <ion-row>
-      <ion-col
-        size-md="8"
-        offset-md="2"
-        size-lg="4"
-        offset-lg="4"
-        class="custom-border-bottom ion-no-border custom-padding"
-      >
-        <chh-app-hospital-selector-with-all-and-filter
-          (hospital)="locationAction($event)"
-        ></chh-app-hospital-selector-with-all-and-filter>
+      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4"
+        class="custom-border-bottom ion-no-border custom-padding">
+        <chh-app-hospital-selector-with-all-and-filter (hospital)="locationAction($event)">
+        </chh-app-hospital-selector-with-all-and-filter>
       </ion-col>
     </ion-row>
     <ion-row class="">
-      <ion-col
-        size-md="8"
-        offset-md="2"
-        size-lg="4"
-        offset-lg="4"
-        class="ion-no-border"
-      >
-        <ion-searchbar
-          [(ngModel)]="searchBar"
-          (ionChange)="filterList()"
-          mode="ios"
-        ></ion-searchbar>
+      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class="ion-no-border">
+        <ion-searchbar [(ngModel)]="searchBar" (ionChange)="filterList()" mode="ios"></ion-searchbar>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -77,131 +62,90 @@
 
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
-    <ion-refresher-content
-      pullingIcon="chevron-down-circle-outline"
-      pullingText="Pull to refresh"
-      refreshingSpinner="circles"
-      refreshingText="Refreshing...">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Pull to refresh"
+      refreshingSpinner="circles" refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
 
 
-  <!--button (click)="generatePDF()">Generate PDF</button-->  
+  <!--button (click)="generatePDF()">Generate PDF</button-->
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <ng-container>
           <div *ngFor="let x of inPatients">
 
-         
-            <ion-card (click)="detail(x.admission_no)" mode="ios"  class="pointer">
-              
+
+            <ion-card (click)="detail(x.admission_no)" mode="ios" class="pointer">
+
               <ion-item lines="none">
                 <ion-avatar slot="start">
                   <chh-app-text-avatar [text]="x.last_name" [color]=""></chh-app-text-avatar>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
-                  <ion-item
-                    slot="start"
-                    lines="none"
-                    class="ion-no-padding"
-                    style="padding-bottom: 5px;"
-                  >
+                  <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;">
                     <h2 class="ion-text-wrap" style="padding-top: 20px;">
                       {{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}
-                      <ion-text color="mango">
-                        <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong>  {{x.gender}}</b></p>
-                        </ion-text>
+                      <ion-text color="primary">
+                        <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong> {{x.gender}}</b>
+                        </p>
+                      </ion-text>
                     </h2>
-                   
-                    <ion-badge
-                      color="warning"
-                      slot="end"
-                      *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE && x.doctor_prof_fee == this.constants.ANY__VALUE__NULL && x.is_posted == this.constants.ANY__VALUE__NULL"
-                    >
-                      {{this.constants.DOCTOR__CODE__PROFESSIONAL_FEE}}</ion-badge
-                    >
-                    <ion-badge
-                      color="success"
-                      slot="end"
-                      *ngIf="x.doctor_prof_fee != this.constants.ANY__VALUE__NULL && x.is_posted !=this.constants.ANY__VALUE__NULL"
-                    >
-                      <ion-icon name="checkmark-outline"></ion-icon
-                    ></ion-badge>
+
+                    <ion-badge color="warning" slot="end"
+                      *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE && x.doctor_prof_fee == this.constants.ANY__VALUE__NULL && x.is_posted == this.constants.ANY__VALUE__NULL">
+                      {{this.constants.DOCTOR__CODE__PROFESSIONAL_FEE}}</ion-badge>
+                    <ion-badge color="success" slot="end"
+                      *ngIf="x.doctor_prof_fee != this.constants.ANY__VALUE__NULL && x.is_posted !=this.constants.ANY__VALUE__NULL">
+                      <ion-icon name="checkmark-outline"></ion-icon>
+                    </ion-badge>
                   </ion-item>
                   <div *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__ADMITTED">
                     <!--Patient Admitted-->
                     <!--Buffer 0.35 -->
-                    <ion-progress-bar
-                      value=".25"
-                      buffer="1"
-                      color="warning"
-                    ></ion-progress-bar>
+                    <ion-progress-bar value=".25" buffer="1" color="warning"></ion-progress-bar>
                   </div>
                   <div
-                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE && (x.is_posted == this.constants.ANY__VALUE__NULL || x.is_posted == this.constants.NUMBER__VALUE__ZERO) && x.doctor_prof_fee == this.constants.ANY__VALUE__NULL"
-                  >
+                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE && (x.is_posted == this.constants.ANY__VALUE__NULL || x.is_posted == this.constants.NUMBER__VALUE__ZERO) && x.doctor_prof_fee == this.constants.ANY__VALUE__NULL">
                     <!--Patient For Discharge-->
                     <!--Buffer 0.60 -->
-                    <ion-progress-bar
-                      value=".50"
-                      buffer="1"
-                      color="warning"
-                    ></ion-progress-bar>
+                    <ion-progress-bar value=".50" buffer="1" color="warning"></ion-progress-bar>
                   </div>
                   <div
-                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE  && (x.is_posted ==this.constants.ANY__VALUE__NULL|| x.is_posted ==this.constants.NUMBER__VALUE__ZERO ) && x.doctor_prof_fee !=this.constants.ANY__VALUE__NULL"
-                  >
+                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE  && (x.is_posted ==this.constants.ANY__VALUE__NULL|| x.is_posted ==this.constants.NUMBER__VALUE__ZERO ) && x.doctor_prof_fee !=this.constants.ANY__VALUE__NULL">
                     <!--Patient For Discharge-->
                     <!--Buffer 0.85 -->
-                    <ion-progress-bar
-                      value=".75"
-                      buffer="1"
-                      color="warning"
-                    ></ion-progress-bar>
+                    <ion-progress-bar value=".75" buffer="1" color="warning"></ion-progress-bar>
                   </div>
                   <div
-                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE  && x.is_posted == '1' && x.doctor_prof_fee !=this.constants.ANY__VALUE__NULL"
-                  >
+                    *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE  && x.is_posted == '1' && x.doctor_prof_fee !=this.constants.ANY__VALUE__NULL">
                     <!--Patient For Discharge-->
-                    <ion-progress-bar
-                      value="1"
-                      color="mango"
-                    ></ion-progress-bar>
+                    <ion-progress-bar value="1" color="mango"></ion-progress-bar>
                   </div>
-                  <ion-row
-                    class="ion-no-padding"
-                    lines="none"
-                    style="padding-top: 10px !important;"
-                  >
+                  <ion-row class="ion-no-padding" lines="none" style="padding-top: 10px !important;">
                     <p>
                       <span *ngIf="x.site == this.constants.CHH_SITE__CODE__CEBU">
-                        <ion-icon
-                          name="location-outline"
-                          slot="start"
-                        ></ion-icon
-                        > {{this.constants.CHH_NAME__VALUE__CEBU}}
+                        <ion-icon name="location-outline" slot="start"></ion-icon>
+                        {{this.constants.CHH_NAME__VALUE__CEBU}}
                       </span>
                       <span *ngIf="x.site == this.constants.CHH_SITE__CODE__MANDAUE">
-                        <ion-icon
-                          name="location-outline"
-                          slot="start"
-                        ></ion-icon
-                        > {{this.constants.CHH_NAME__VALUE__MANDAUE}} </span
-                      ><br />
+                        <ion-icon name="location-outline" slot="start"></ion-icon>
+                        {{this.constants.CHH_NAME__VALUE__MANDAUE}}
+                      </span><br />
                       <ion-icon name="bed-outline" slot="start"></ion-icon> Room
                       {{x.room_no}}<br />
-                 
+
                       <ion-icon name="clipboard-outline" slot="start"></ion-icon>
                       as {{x.doctor_Status}}<br />
-                      <ion-icon name="alarm-outline" slot="start" color="" *ngIf="x.forDischargeDateTime != null"></ion-icon>
+                      <ion-icon name="alarm-outline" slot="start" color="" *ngIf="x.forDischargeDateTime != null">
+                      </ion-icon>
                       <ion-text *ngIf="x.forDischargeDateTime != null" color="">
-                        DN : 
-                      {{x.forDischargeDateTime}}<br />
-                    </ion-text>
+                        DN :
+                        {{x.forDischargeDateTime}}<br />
+                      </ion-text>
                       <!--ion-icon name="body-outline"></ion-icon>Patient Journey<br /-->
                     </p>
-                    
+
                     <br />
                   </ion-row>
                 </ion-label>
@@ -213,10 +157,7 @@
         </ng-container>
 
         <ng-container>
-          <div
-            *ngIf="!objecthandler && !isFetchDone else noDataAvailable"
-            class="ion-padding custom-skeleton"
-          >
+          <div *ngIf="!objecthandler && !isFetchDone else noDataAvailable" class="ion-padding custom-skeleton">
             <!-- Skeleton  -->
             <ion-card mode="ios">
               <ion-item lines="none">
@@ -224,26 +165,12 @@
                   <ion-skeleton-text animated></ion-skeleton-text>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
-                  <ion-item
-                    slot="start"
-                    lines="none"
-                    class="ion-no-padding"
-                    style="padding-bottom: 5px;"
-                  >
-                    <ion-skeleton-text
-                      animated
-                      style="width: 100%;"
-                    ></ion-skeleton-text>
+                  <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated style="width: 100%;"></ion-skeleton-text>
                   </ion-item>
-                  <ion-skeleton-text
-                    animated
-                    style="width: 60%;"
-                  ></ion-skeleton-text>
+                  <ion-skeleton-text animated style="width: 60%;"></ion-skeleton-text>
                   <ion-row>
-                    <ion-skeleton-text
-                      animated
-                      style="width: 40%;"
-                    ></ion-skeleton-text>
+                    <ion-skeleton-text animated style="width: 40%;"></ion-skeleton-text>
                   </ion-row>
                 </ion-label>
               </ion-item>
@@ -255,26 +182,12 @@
                   <ion-skeleton-text animated></ion-skeleton-text>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
-                  <ion-item
-                    slot="start"
-                    lines="none"
-                    class="ion-no-padding"
-                    style="padding-bottom: 5px;"
-                  >
-                    <ion-skeleton-text
-                      animated
-                      style="width: 100%;"
-                    ></ion-skeleton-text>
+                  <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated style="width: 100%;"></ion-skeleton-text>
                   </ion-item>
-                  <ion-skeleton-text
-                    animated
-                    style="width: 60%;"
-                  ></ion-skeleton-text>
+                  <ion-skeleton-text animated style="width: 60%;"></ion-skeleton-text>
                   <ion-row>
-                    <ion-skeleton-text
-                      animated
-                      style="width: 40%;"
-                    ></ion-skeleton-text>
+                    <ion-skeleton-text animated style="width: 40%;"></ion-skeleton-text>
                   </ion-row>
                 </ion-label>
               </ion-item>
@@ -286,26 +199,12 @@
                   <ion-skeleton-text animated></ion-skeleton-text>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
-                  <ion-item
-                    slot="start"
-                    lines="none"
-                    class="ion-no-padding"
-                    style="padding-bottom: 5px;"
-                  >
-                    <ion-skeleton-text
-                      animated
-                      style="width: 100%;"
-                    ></ion-skeleton-text>
+                  <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated style="width: 100%;"></ion-skeleton-text>
                   </ion-item>
-                  <ion-skeleton-text
-                    animated
-                    style="width: 60%;"
-                  ></ion-skeleton-text>
+                  <ion-skeleton-text animated style="width: 60%;"></ion-skeleton-text>
                   <ion-row>
-                    <ion-skeleton-text
-                      animated
-                      style="width: 40%;"
-                    ></ion-skeleton-text>
+                    <ion-skeleton-text animated style="width: 40%;"></ion-skeleton-text>
                   </ion-row>
                 </ion-label>
               </ion-item>
@@ -317,26 +216,12 @@
                   <ion-skeleton-text animated></ion-skeleton-text>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
-                  <ion-item
-                    slot="start"
-                    lines="none"
-                    class="ion-no-padding"
-                    style="padding-bottom: 5px;"
-                  >
-                    <ion-skeleton-text
-                      animated
-                      style="width: 100%;"
-                    ></ion-skeleton-text>
+                  <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated style="width: 100%;"></ion-skeleton-text>
                   </ion-item>
-                  <ion-skeleton-text
-                    animated
-                    style="width: 60%;"
-                  ></ion-skeleton-text>
+                  <ion-skeleton-text animated style="width: 60%;"></ion-skeleton-text>
                   <ion-row>
-                    <ion-skeleton-text
-                      animated
-                      style="width: 40%;"
-                    ></ion-skeleton-text>
+                    <ion-skeleton-text animated style="width: 40%;"></ion-skeleton-text>
                   </ion-row>
                 </ion-label>
               </ion-item>
@@ -348,26 +233,12 @@
                   <ion-skeleton-text animated></ion-skeleton-text>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
-                  <ion-item
-                    slot="start"
-                    lines="none"
-                    class="ion-no-padding"
-                    style="padding-bottom: 5px;"
-                  >
-                    <ion-skeleton-text
-                      animated
-                      style="width: 100%;"
-                    ></ion-skeleton-text>
+                  <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated style="width: 100%;"></ion-skeleton-text>
                   </ion-item>
-                  <ion-skeleton-text
-                    animated
-                    style="width: 60%;"
-                  ></ion-skeleton-text>
+                  <ion-skeleton-text animated style="width: 60%;"></ion-skeleton-text>
                   <ion-row>
-                    <ion-skeleton-text
-                      animated
-                      style="width: 40%;"
-                    ></ion-skeleton-text>
+                    <ion-skeleton-text animated style="width: 40%;"></ion-skeleton-text>
                   </ion-row>
                 </ion-label>
               </ion-item>
@@ -377,20 +248,17 @@
 
         <ng-template #noDataAvailable>
           <div *ngIf="!objecthandler && isFetchDone">
-          <ion-grid >
-            <ion-row>
-              <ion-col size="8" offset="2">
-                <div class="vertical-center">
-                  <div class="center">
-                    <img
-                      src="assets/img/no-data-rafiki.png"
-                    
-                    />
+            <ion-grid>
+              <ion-row>
+                <ion-col size="8" offset="2">
+                  <div class="vertical-center">
+                    <div class="center">
+                      <img src="assets/img/no-data-rafiki.png" />
+                    </div>
                   </div>
-                </div>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
           </div>
         </ng-template>
       </ion-col>
