--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -104,9 +104,24 @@ ___  ___        _      _  _
 
     </pinch-zoom>
 
+
   </ion-card>
 
+  <ion-card mode="ios">
+    <canvas #canvas (touchstart)="startDrawing($event)" (touchmove)="moved($event)" width="350" height="200"></canvas>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6">
+          <ion-button color="danger" (click)="clearPad()">Clear</ion-button>
+        </ion-col>
+        <ion-col size="4" offset="2">
+          <ion-button color="secondary" (click)="savePad()">Save</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
+    <img src='{{ signatureImg }}' />
+  </ion-card>
 
   <app-chh-app-final-diagnosis [data]="admissionstatus" [finalDiagnosis]="finalDiagnosis" [limit]="limit"
     [truncating]="truncating" [finalDiagnosis1]="finalDiagnosis1" [finalDiagnosis2]="finalDiagnosis2">
