--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -94,7 +94,7 @@ ___  ___        _      _  _
     </ion-list>
   </ion-card>
 
-  <ion-card mode="ios">
+  <!--ion-card mode="ios">
     <pinch-zoom>
 
       <pdf-viewer [src]="pdfSrc" [rotation]="0" [original-size]="false" [show-all]="true" [fit-to-page]="false"
@@ -105,9 +105,9 @@ ___  ___        _      _  _
     </pinch-zoom>
 
 
-  </ion-card>
+  </ion-card-->
 
-  <ion-card mode="ios">
+  <!--ion-card mode="ios">
     <canvas #canvas (touchstart)="startDrawing($event)" (touchmove)="moved($event)" width="350" height="200"></canvas>
     <ion-grid>
       <ion-row>
@@ -119,9 +119,8 @@ ___  ___        _      _  _
         </ion-col>
       </ion-row>
     </ion-grid>
-
-    <img src='{{ signatureImg }}' />
-  </ion-card>
+  <img src='{{ signatureImg }}' />
+  </ion-card-->
 
   <app-chh-app-final-diagnosis [data]="admissionstatus" [finalDiagnosis]="finalDiagnosis" [limit]="limit"
     [truncating]="truncating" [finalDiagnosis1]="finalDiagnosis1" [finalDiagnosis2]="finalDiagnosis2">
@@ -263,7 +262,7 @@ ______          _    _
   </ion-fab> -->
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col size-lg="1" size-md="12"></ion-col>
+      <ion-col size-lg="2" size-md="12"></ion-col>
       <!-- <ion-col size-lg="3" size-md="4">
               <app-chh-app-admitting-diagnosis
                 [admittingDiagnosis]="admittingDiagnosis"
@@ -308,7 +307,8 @@ ______          _    _
           [truncating]="truncating" [finalDiagnosis1]="finalDiagnosis1" [finalDiagnosis2]="finalDiagnosis2">
         </app-chh-app-final-diagnosis>
       </ion-col>
-      <ion-col size-lg="3" size-md="6" class=" max-height-82vh overflow-scroll">
+      <!-- Progress notes -->
+      <!--ion-col size-lg="3" size-md="6" class=" max-height-82vh overflow-scroll">
         <ion-card mode="ios" *ngIf="progNot_account_no != ''">
           <ion-list>
             <ion-item style="padding-top: 10px;">
@@ -328,7 +328,7 @@ ______          _    _
           </ion-list>
         </ion-card>
 
-      </ion-col>
+      </ion-col-->
 
       <ion-col size-lg="3" size-md="6" class=" max-height-82vh overflow-scroll">
         <app-chh-app-list-of-doctors [coDoctors]="coDoctors" [objecthandler]="objecthandler"
