--- a/src/app/pages/doctors-information/medical-abstract/medical-abstract.page.html
+++ b/src/app/pages/doctors-information/medical-abstract/medical-abstract.page.html
@@ -30,7 +30,7 @@
               </ion-label>
             </ion-item>
           </ion-card>
-          <pinch-zoom style="background-color: rgb(255, 255, 255);">
+          <pinch-zoom style="background-color: rgb(255, 255, 255);" *ngIf="isPDFLoading">
             <pdf-viewer [src]="pdfSrc" [rotation]="0" [original-size]="false" [show-all]="true" [fit-to-page]="false"
               [zoom]="1" [zoom-scale]="'page-width'" [stick-to-page]="false" [render-text]="true"
               [external-link-target]="'blank'" [autoresize]="true" [show-borders]="false"
