removed refresher on signature pad

--- a/src/app/pages/doctors-information/collectibles/collectibles.page.html
+++ b/src/app/pages/doctors-information/collectibles/collectibles.page.html
@@ -35,7 +35,7 @@
           <ion-label>Choose</ion-label>
           <ion-select placeholder="Select One" [(ngModel)]="mode" (ionChange)="selectedMode()">
             <ion-select-option value="regpf">Regular PF</ion-select-option>
-            <ion-select-option value="phicpf">Philhealth PF</ion-select-option>
+            <ion-select-option value="phicpf">PhilHealth PF</ion-select-option>
             <ion-select-option value="readersfee">Readers Fee</ion-select-option>
           </ion-select>
         </ion-item>
