--- a/src/app/pages/doctors-information/medical-abstract/medical-abstract.page.html
+++ b/src/app/pages/doctors-information/medical-abstract/medical-abstract.page.html
@@ -40,29 +40,35 @@
           <ion-button *ngIf="isPDFLoading" (click)="onClick()">Sign Document</ion-button>
           <ion-button id="trigger-button" style="display:none">Sign Document</ion-button>
           <ion-modal trigger="trigger-button" show-backdrop="true" class="ion6modaltest">
+
             <ng-template>
-              <div style="padding: 10px;">
+              <ion-content class="blur testssss">
+                <div class="  customBackground">
+                  <div class="  customBackgroundColor" style="padding:10px">
+                    <ion-icon style="float:right" size="large" name="close-outline" (click)="closeModal()"></ion-icon>
+                    <div class="signature-container ">
+                      <signature-pad [options]="signaturePadOptions" (onBeginEvent)="drawStart()"
+                        (onEndEvent)="drawComplete()">
+                      </signature-pad>
 
-
-                <div class="signature-container" style="border: solid 1px #000000;">
-                  <signature-pad [options]="signaturePadOptions" (onBeginEvent)="drawStart()"
-                    (onEndEvent)="drawComplete()">
-                  </signature-pad>
-
+                    </div>
+                    <ion-grid>
+                      <ion-row>
+                        <ion-col size="4">
+                          <ion-button color="danger" (click)="clearPad()">Clear</ion-button>
+                        </ion-col>
+                        <ion-col size="5"></ion-col>
+                        <ion-col size="3">
+                          <ion-button color="secondary" (click)="savePad()">Save</ion-button>
+                        </ion-col>
+                      </ion-row>
+                    </ion-grid>
+                    <!--img src='{{ signatureImg }}' /-->
+                  </div>
                 </div>
-                <ion-grid>
-                  <ion-row>
-                    <ion-col size="6">
-                      <ion-button color="danger" (click)="clearPad()">Clear</ion-button>
-                    </ion-col>
-                    <ion-col size="4" offset="2">
-                      <ion-button color="secondary" (click)="savePad()">Save</ion-button>
-                    </ion-col>
-                  </ion-row>
-                </ion-grid>
-                <!--img src='{{ signatureImg }}' /-->
-              </div>
+              </ion-content>
             </ng-template>
+
           </ion-modal>
 
           <!--div style="padding: 10px;">
