--- a/src/global.scss
+++ b/src/global.scss
@@ -486,7 +486,7 @@ ion-modal.ion5modal {
 ion-modal.ion6modal {
   --width: 100%;
   --height: 100%;
-  --background: rgba(44, 39, 45, 0.2);
+  --background: rgba(255, 255, 255, 0.2);
   &::part(content) {
     backdrop-filter: blur(6px);
   }
@@ -504,8 +504,54 @@ ion-modal.ion6modal {
     }
   }
 }
+
+/*
 ion-modal.ion6modaltest {
   --width: 100%;
   --height: 60%;
+  --background: rgba(255, 255, 255, 0.2);
+  &::part(content) {
+    backdrop-filter: blur(6px);
+  }
+    
+    @media (min-width: 767px) {
+  --width: 50%;
+  --height: 60%;
+    }
 
+
+}
+*/
+
+ion-modal.ion6modaltest {
+  --width: 100%;
+  --height: 100%;
+  --background: rgba(255, 255, 255, 0.2);
+
+  &::part(content) {
+    backdrop-filter: blur(6px);
+  }
+  .customBackgroundColor{
+    width: 100%;
+    height: 100%;
+  }
+  ion-content.blur {
+    --background: transparent;
+    --padding-top: 25vh;
+    @media (min-width: 767px) {
+
+      --padding-end: 25%;
+      --padding-start: 25%;
+ 
+     /*.customBackground{
+    
+        width: 50%;
+     
+      }*/
+    }
+
+    ion-datetime {
+    border-radius: 8px;
+    }
+  }
 }
