--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,6 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   --background-color: #ffffff;
+  --ion-background-color:#ffffff;
   --text-color: #292b2c;
   --progress-note-card-border-color: #808080;
   /** default primary **/
@@ -415,6 +416,9 @@ body[color-theme='dark'] {
 }
 .customcardcss {
   //border: solid 2px var(--progress-note-card-border-color);
+}
+.customBackgroundColor{
+  background-color: var(--ion-background-color);
 }
 .progressnotes {
   width: auto;
