--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -152,7 +152,7 @@
       <ion-col size-md="8" size-lg="6">
         <ng-container>
 
-          <div *ngFor="let x of listOfPatients">
+          <div *ngFor="let x of listOfPatientsFinal">
             <ion-card mode="ios" class="pointer">
 
               <ion-item lines="none">
@@ -289,5 +289,8 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
