no more foreach on inpatients

--- a/src/app/pages/doctors-information/medical-abstract/medical-abstract.page.html
+++ b/src/app/pages/doctors-information/medical-abstract/medical-abstract.page.html
@@ -38,8 +38,8 @@
             </pdf-viewer>
           </pinch-zoom>
           <ion-button *ngIf="isPDFLoading" (click)="onClick()">Sign Document</ion-button>
-          <ion-button id="trigger-button" style="display:none">Sign Document</ion-button>
-          <ion-modal trigger="trigger-button" show-backdrop="true" class="ion6modaltest">
+          <ion-button id="trigger-button-sign" style="display:none">Sign Document</ion-button>
+          <ion-modal trigger="trigger-button-sign" show-backdrop="true" class="ion6modaltest">
 
             <ng-template>
               <ion-content class="blur testssss">
