--- a/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
+++ b/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
@@ -12,7 +12,7 @@
   </div>
 </ion-header>
 <!-- <app-chh-app-desktop-navigation *ngIf="isDesktop"></app-chh-app-desktop-navigation> -->
-<ion-content *ngIf="ccCase=='first'">
+<ion-content>
 
 
 
@@ -29,7 +29,7 @@
 
 
 
-          <ion-list>
+          <!--ion-list>
             <ion-item *ngFor="let x of caseRateResponse_first">
               <ion-label>
                 <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
@@ -41,7 +41,7 @@
                 </ion-badge>
               </ion-label>
             </ion-item>
-          </ion-list>
+          </ion-list-->
 
 
 
@@ -95,6 +95,9 @@
               </ion-item>
             </ion-list>
           </div>
+
+
+
           <div *ngIf="ionNoData">
             <ion-grid>
               <ion-row>
@@ -108,6 +111,9 @@
               </ion-row>
             </ion-grid>
           </div>
+
+
+
           <div *ngIf="ionStart">
             <div class="ion-text-center">
               <img src="assets/img/hunt-rafiki.png" alt="Search" />
@@ -115,8 +121,8 @@
             </div>
           </div>
           <ion-list>
-            <ion-item *ngFor="let x of caseRateResponse_first">
-              <ion-label>asd
+            <ion-item *ngFor="let x of caseRate">
+              <ion-label>
                 <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
                 <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
                 <ion-badge>
@@ -134,8 +140,12 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
-<ion-content *ngIf="ccCase=='second'">
+<!--ion-content *ngIf="ccCase=='second'">
   <ion-grid class="ion-no-padding">
     <ion-row class="custom-padding">
       <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" class="custom-border-bottom ion-no-border ">
@@ -210,7 +220,7 @@
     </ion-row>
   </ion-grid>
 
-</ion-content>
+</ion-content-->
 <ion-footer class="ion-no-border" color="mango">
   <ion-grid class="ion-no-padding">
     <ion-row class="custom-padding">
