added data testid on PF submit

--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -247,7 +247,8 @@
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4">
             <ion-button color="mango" size="default" expand="block" shape="round" class="buttonActive"
-              (click)="postSummary()" [disabled]="disableSubmit"><span *ngIf="!disableSubmit">Submit</span>
+              (click)="postSummary()" [disabled]="disableSubmit" [attr.data-testid]='id'><span
+                *ngIf="!disableSubmit">Submit</span>
               <ion-spinner *ngIf="disableSubmit"></ion-spinner>
             </ion-button>
           </ion-col>
@@ -482,7 +483,7 @@
           </li>
         </ul>
         <ion-button *ngIf="isDesktop" color="mango" class="buttonActive" size="default" expand="block" shape="round"
-          (click)="postSummary()">
+          (click)="postSummary()" [attr.data-testid]='id'>
           Submit</ion-button>
       </ion-col>
     </ion-row>
