--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -67,6 +67,14 @@
             <span style="font-size: 13px;"> Discharge Notice : {{ dischargeNotice }}</span>
           </div>
 
+          <div class=" font-size12" style="font-size: 13px;" *ngIf="is_pwd =='Y' && is_senior=='Y'">
+            <ion-icon name="accessibility-outline"></ion-icon>
+            <span style="font-size: 13px;">Patient is
+              <span *ngIf="is_pwd =='Y'">PWD</span>
+              <span *ngIf="is_pwd =='Y' && is_senior=='Y'">,</span>
+              <span *ngIf="is_senior =='Y'">Senior</span>
+            </span>
+          </div>
         </div>
       </ion-item>
       <ion-item lines="none" style="padding-bottom: 10px">
@@ -147,6 +155,14 @@
             <span style="font-size: 13px;"> Discharge Notice : {{ dischargeNotice }}</span>
           </div>
 
+          <div class=" font-size12" style="font-size: 13px;" *ngIf="is_pwd =='Y' && is_senior=='Y'">
+            <ion-icon name="accessibility-outline"></ion-icon>
+            <span style="font-size: 13px;">Patient is
+              <span *ngIf="is_pwd =='Y'">PWD</span>
+              <span *ngIf="is_pwd =='Y' && is_senior=='Y'">,</span>
+              <span *ngIf="is_senior =='Y'">Senior</span>
+            </span>
+          </div>
         </div>
       </ion-item>
       <ion-item lines="none" style="padding-bottom: 10px">
