--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -43,7 +43,7 @@
 </ion-header>
 
 <ion-content *ngIf="!isDesktop" id="content">
-  <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted">
+  <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [is_pwd]="is_pwd" [is_senior]="is_senior">
   </app-chh-app-patient-header>
 
 
@@ -116,7 +116,8 @@
     <ion-card mode="ios" *ngIf="!isDesktop && InsuranceShowVat">
       <ion-item lines="none">
         <ion-label>Add VAT?</ion-label>
-        <ion-checkbox color="primary" checked="false" [(ngModel)]="InsuranceVat" (ionChange)="insuranceVat()">
+        <ion-checkbox color="primary" checked="false" [(ngModel)]="InsuranceVat" (ionChange)="insuranceVat()"
+          disabled="isVatDisabled">
         </ion-checkbox>
       </ion-item>
     </ion-card>
@@ -345,7 +346,7 @@ ______                         ______   _   _   _____   _____
       <ion-item lines="none">
         <ion-label>Add VAT?</ion-label>
         <ion-checkbox color="primary" checked="false" [(ngModel)]="PersonalPhilhealthVat"
-          (ionChange)="personalPhilhealthVat()"></ion-checkbox>
+          (ionChange)="personalPhilhealthVat()" disabled="isVatDisabled"></ion-checkbox>
       </ion-item>
     </ion-card>
 
@@ -563,7 +564,8 @@ ______          _    _
     <ion-row>
       <ion-col size-lg="2" size-md="12"></ion-col>
       <ion-col size-lg="3" size-md="6">
-        <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted"></app-chh-app-patient-header>
+        <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [is_pwd]="is_pwd"
+          [is_senior]="is_senior"></app-chh-app-patient-header>
       </ion-col>
 
       <ion-col size-lg="4" size-md="6">
@@ -625,7 +627,7 @@ ______          _    _
                   <ion-item lines="none">
                     <ion-label>Add VAT?</ion-label>
                     <ion-checkbox color="primary" checked="false" [(ngModel)]="InsuranceVat"
-                      (ionChange)="insuranceVat()">
+                      (ionChange)="insuranceVat()" disabled="isVatDisabled">
                     </ion-checkbox>
                   </ion-item>
                 </ion-card>
@@ -844,7 +846,7 @@ ______                         ______   _   _   _____   _____
                   <ion-item lines="none">
                     <ion-label>Add VAT?</ion-label>
                     <ion-checkbox color="primary" checked="false" [(ngModel)]="PersonalPhilhealthVat"
-                      (ionChange)="personalPhilhealthVat()"></ion-checkbox>
+                      (ionChange)="personalPhilhealthVat()" disabled="isVatDisabled"></ion-checkbox>
                   </ion-item>
                 </ion-card>
 
