updated DOKI ready for production (doctors side)

--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -48,28 +48,13 @@
                 <ion-item>
                   <br />
                 </ion-item>
-                <ion-item>
+                <!--ion-item>
                   <app-upload></app-upload>
-                </ion-item>
-
-
-
-                <!--div *ngFor="let item of tmpData| keyvalue">
-                  <div *ngFor="let data of item.value | keyvalue">
-                   
-                    <div *ngFor="let value of data.value | keyvalue">
-                      {{ data.key }}:  {{ value.key }} - {{ value.value }}
-
-
-
-                  </div>
-                </div>
-              </div-->
-
-                <!--ion-item *ngFor="let x of tmpData"> 
-                  <ion-icon slot="end" name="notifications-outline"></ion-icon>
-                  <b>{{x.appearance.darkmode}}</b>
                 </ion-item-->
+
+
+
+
 
 
                 <ion-item>
