--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -75,7 +75,7 @@ ___  ___        _      _  _
   </app-chh-app-admitting-diagnosis>
 
   <!-- progress notes -->
-  <ion-card mode="ios" *ngIf="progNot_account_no != ''">
+  <!--ion-card mode="ios" *ngIf="progNot_account_no != ''">
     <ion-list>
       <ion-item style="padding-top: 10px;">
         <div class="ion-text-wrap"><b>Progress Notes</b><br /></div>
@@ -92,7 +92,7 @@ ___  ___        _      _  _
         </div>
       </ion-item>
     </ion-list>
-  </ion-card>
+  </ion-card-->
 
   <!--ion-card mode="ios">
     <pinch-zoom>
